fix horizontal overflow

--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 16px;
+  user-select: none;
 }
 .todoItem__checkbox > img {
   display: none;
@@ -39,13 +40,35 @@
 }
 
 /* Title */
-.todoItem > h1 {
+.todoItem__todoTitle {
+  max-height: 40px;
+  width: 408px;
+  min-width: 408px;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+/* vertical scroll bar style */
+.todoItem__todoTitle::-webkit-scrollbar {
+  height: 5px;
+}
+.todoItem__todoTitle::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #d6d6d6;
+}
+
+.todoItem__todoTitle::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #919191;
+}
+
+.todoItem__todoTitle > h1 {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   color: #2e2e2e;
   flex: 1;
+  white-space: nowrap;
 }
 /* checked */
 .textChecked {
@@ -68,10 +91,12 @@
   flex-direction: column;
   align-items: flex-end;
   margin-top: 0px;
+  user-select: none;
 }
 
 .todoItem__moreOptionExpanded {
   margin-top: 80px;
+  margin-left: -80px;
 }
 
 /* Edit Mode */
